--- a/Assignment_PartB_Producer1.ipynb
+++ b/Assignment_PartB_Producer1.ipynb
@@ -2,11 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# first find the latest date that was inserted in the climate data into the MongoDB Database in Part A. \n",
+    "# Name: Saral Gautam\n",
+    "# ID: 30618428\n",
+    "# email: sgau0007@student.monash.edu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# THIS FIRST CELL JUST FINDS THE LATEST DATE THE PRODUCER IS BELOW IT \n",
     "from pprint import pprint\n",
     "import pymongo\n",
     "from pymongo import MongoClient\n",
@@ -17,15 +28,8 @@
     "from json import dumps\n",
     "from kafka import KafkaProducer\n",
     "import random\n",
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import time\n",
+    "\n",
     "def samedate(hotspot_date, climate_date):\n",
     "    # this function checks if two dates are the same\n",
     "    # This function was made because date is forrmatted differently in hotspot_historic and climate_historic\n",
@@ -42,15 +46,8 @@
     "    for j in range(date_length - 3, -1, -1):\n",
     "        final_date.append(actual_date[j])\n",
     "\n",
-    "    return (join_string.join(final_date) == climate_date)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return (join_string.join(final_date) == climate_date)\n",
+    "\n",
     "def get_prec_number(a_string):\n",
     "    # this function gives the float part of a precipitation measurement\n",
     "    final = a_string.strip()\n",
@@ -60,27 +57,14 @@
     "def get_prec_letter(a_string):\n",
     "    # this function gives the letter representing the tyoe of precipitation measurement\n",
     "    final = a_string.strip()\n",
-    "    return final[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return final[-1]\n",
+    "\n",
     "def change_format(a_date):\n",
+    "     # this function puts the data in a string format that allows it to be sorted later on by MongoDB\n",
     "    date_final = datetime.strptime(a_date, '%d/%m/%y')\n",
     "    formatted = date_final.strftime(\"20%y/%m/%d\")\n",
-    "    return formatted\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return formatted\n",
+    "\n",
     "# Task 2\n",
     "# Question 1\n",
     "# So we have to load all the data from the csv files into a new database fit3182_assignment_db\n",
@@ -159,18 +143,7 @@
     "        documents.append(no_fire)\n",
     "\n",
     "\n",
-    "result = a_collection.insert_many(documents)  \n",
-    "# cursor = a_collection.find({})\n",
-    "# for item in cursor:\n",
-    "#     pprint(item)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "result = a_collection.insert_many(documents) \n",
     "# find the latest date in the stream\n",
     "latest_date = a_collection.find().sort(\"date\", pymongo.DESCENDING).limit(1)\n",
     "for k in latest_date:\n",
@@ -179,50 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Publishing records..\n",
-      "Message published successfully. Data:  ['-37.856', '143.416', '15', '53.7', '6.8', '11.1', ' 0.51G', '125', '2019/01/02', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.606', '149.312', '16', '51', '6', '13', ' 0.00G', '136', '2019/01/03', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.1', '143.767', '20', '53.5', '7.2', '15.9', ' 0.31G', '166', '2019/01/04', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.7801', '142.7151', '16', '51.7', '7.4', '15', ' 0.00I', '135', '2019/01/05', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.33', '148.087', '12', '41.8', '14.7', '21', ' 0.00I', '110', '2019/01/06', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.6833', '141.6347', '15', '56.2', '16.9', '20', ' 1.77G', '122', '2019/01/07', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.444', '148.101', '9', '42', '4.6', '12', ' 0.00I', '82', '2019/01/08', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.404', '142.5467', '25', '60.9', '6.3', '8.9', ' 0.00I', '195', '2019/01/09', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.591', '149.33', '16', '46.7', '10', '16.9', ' 0.00I', '141', '2019/01/10', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.45', '148.097', '9', '41', '8.2', '9.9', ' 0.00G', '83', '2019/01/11', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.608', '149.292', '15', '44.6', '9.7', '12', ' 0.02G', '134', '2019/01/12', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.57', '148.034', '11', '40.4', '19.3', '26', ' 0.00G', '102', '2019/01/13', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.091', '145.362', '12', '48.8', '4.2', '7', ' 0.00I', '104', '2019/01/14', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.94', '143.281', '21', '52.8', '4.1', '11.1', ' 0.00I', '176', '2019/01/15', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.3774', '143.7079', '11', '43.2', '8.1', '14', ' 0.20G', '100', '2019/01/16', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.7685', '142.7134', '14', '48.2', '12.5', '19', ' 0.03G', '122', '2019/01/17', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.719', '142.154', '13', '47', '7.9', '15', ' 0.02G', '114', '2019/01/18', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-38.141', '143.183', '23', '54.1', '5.7', '14', ' 0.00I', '190', '2019/01/19', '00:00:00', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.0313', '143.6296', '14', '47.4', '10.6', '19', ' 0.03G', '123', '2019/01/20', '00:00:00', 'Producer1']\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-560300dacca5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline_sent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m         \u001b[0mpublish_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproducer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'parsed'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m         \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get the data from the stream now\n",
-    "\n",
+    "import csv\n",
     "            \n",
     "with open('climate_streaming.csv', 'r') as file_three: # open hotspot historic file\n",
     "    cstream_data = csv.reader(file_three)\n",
