--- a/Assignment_PartB_Producer2.ipynb
+++ b/Assignment_PartB_Producer2.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Name: Saral Gautam\n",
+    "# ID: 30618428\n",
+    "# email: sgau0007@student.monash.edu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# THIS FIRST CELL JUST FINDS THE LATEST DATE THE PRODUCER IS BELOW IT\n",
     "from pprint import pprint\n",
     "import pymongo\n",
     "from pymongo import MongoClient\n",
@@ -48,6 +60,7 @@
     "    return final[-1]\n",
     "\n",
     "def change_format(a_date):\n",
+    "     # this function puts the data in a string format that allows it to be sorted later on by MongoDB\n",
     "    date_final = datetime.strptime(a_date, '%d/%m/%y')\n",
     "    formatted = date_final.strftime(\"20%y/%m/%d\")\n",
     "    return formatted\n",
@@ -143,126 +156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Publishing records..\n",
-      "Message published successfully. Data:  ['-36.9521', '143.0574', '73', '47', '2019/01/02', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.6965', '142.7116', '88', '64', '2019/01/02', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.275', '146.154', '86', '60', '2019/01/02', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-38.0383', '144.4307', '59', '40', '2019/01/02', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.4449', '140.9836', '91', '68', '2019/01/02', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.443', '147.3064', '61', '41', '2019/01/03', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.561', '148.032', '73', '34', '2019/01/03', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.0133', '141.8094', '61', '41', '2019/01/03', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-35.9701', '145.7061', '71', '46', '2019/01/03', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.7903', '141.618', '90', '67', '2019/01/03', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-38.5194', '143.4522', '63', '42', '2019/01/04', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.7746', '148.3673', '88', '65', '2019/01/04', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-34.2695', '142.2025', '80', '54', '2019/01/04', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.2724', '146.4168', '60', '44', '2019/01/04', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.4047', '143.6615', '69', '45', '2019/01/04', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.6104', '147.8367', '62', '42', '2019/01/05', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.9184', '142.5436', '50', '42', '2019/01/05', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.5104', '144.4674', '88', '64', '2019/01/05', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.5963', '144.0066', '51', '38', '2019/01/05', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.1999', '143.8231', '100', '90', '2019/01/05', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.6704', '141.3197', '69', '45', '2019/01/06', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.5886', '142.8549', '55', '39', '2019/01/06', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.4811', '142.2606', '77', '50', '2019/01/06', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.987', '144.005', '50', '38', '2019/01/06', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.8079', '145.1409', '63', '42', '2019/01/06', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.8088', '142.2291', '80', '54', '2019/01/07', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.4422', '141.4172', '69', '46', '2019/01/07', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.2115', '141.6878', '77', '50', '2019/01/07', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.1228', '141.7389', '59', '41', '2019/01/07', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-38.2853', '145.9519', '98', '83', '2019/01/07', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-35.889', '145.614', '82', '56', '2019/01/08', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.8099', '142.728', '93', '73', '2019/01/08', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.8328', '142.5142', '72', '46', '2019/01/08', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.5422', '143.2276', '75', '49', '2019/01/08', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.3065', '141.4495', '69', '44', '2019/01/08', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-38.4398', '146.6093', '81', '54', '2019/01/09', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-35.6961', '143.1935', '61', '35', '2019/01/09', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-35.6389', '142.3677', '83', '57', '2019/01/09', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.2166', '143.8674', '50', '38', '2019/01/09', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-38.0398', '142.6159', '87', '62', '2019/01/09', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-38.0907', '143.2362', '69', '45', '2019/01/10', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.9625', '143.5474', '84', '58', '2019/01/10', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.7754', '143.5261', '68', '44', '2019/01/10', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.9378', '144.3115', '87', '62', '2019/01/10', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.3459', '141.5586', '100', '91', '2019/01/10', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-38.1693', '143.0466', '93', '73', '2019/01/11', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.1402', '144.6153', '86', '61', '2019/01/11', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-35.1175', '141.1396', '84', '58', '2019/01/11', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-38.3343', '143.8644', '59', '43', '2019/01/11', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.8022', '145.2616', '74', '48', '2019/01/11', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.8046', '146.0304', '91', '43', '2019/01/12', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.246', '142.143', '89', '60', '2019/01/12', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.3094', '146.1945', '77', '60', '2019/01/12', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.1999', '143.8231', '100', '90', '2019/01/12', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.9206', '141.0574', '73', '47', '2019/01/12', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.5262', '144.5737', '98', '84', '2019/01/13', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.4336', '147.0534', '60', '51', '2019/01/13', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.7074', '147.5849', '78', '55', '2019/01/13', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.749', '148.297', '50', '42', '2019/01/13', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.4816', '141.6635', '94', '75', '2019/01/13', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.3864', '141.3034', '80', '54', '2019/01/14', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.7714', '142.8339', '77', '50', '2019/01/14', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-35.7842', '143.4937', '79', '52', '2019/01/14', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.8565', '147.2532', '71', '46', '2019/01/14', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.5664', '142.9892', '65', '42', '2019/01/14', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.2583', '142.4792', '81', '55', '2019/01/15', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.0135', '143.5822', '69', '44', '2019/01/15', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.174', '142.737', '79', '52', '2019/01/15', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.0077', '141.7747', '100', '93', '2019/01/15', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.0925', '145.7774', '84', '58', '2019/01/15', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.7069', '142.1573', '66', '53', '2019/01/16', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.3511', '146.3809', '50', '38', '2019/01/16', '04:48:00', 'Producer2']\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Message published successfully. Data:  ['-36.4721', '142.2586', '88', '64', '2019/01/16', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.6095', '142.7011', '87', '62', '2019/01/16', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.9151', '142.0798', '77', '50', '2019/01/16', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.3756', '143.7243', '100', '88', '2019/01/17', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.7321', '143.1978', '54', '46', '2019/01/17', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-34.5019', '141.3528', '71', '46', '2019/01/17', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.4574', '142.9354', '59', '40', '2019/01/17', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.9194', '143.6131', '76', '50', '2019/01/17', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.7522', '142.3183', '66', '50', '2019/01/18', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.671', '144.6536', '84', '58', '2019/01/18', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.4426', '140.9954', '84', '57', '2019/01/18', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.472', '148.119', '85', '54', '2019/01/18', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.9085', '141.2821', '77', '50', '2019/01/18', '19:12:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-35.4616', '143.7251', '80', '53', '2019/01/19', '00:00:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-35.1476', '141.819', '86', '60', '2019/01/19', '04:48:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.0782', '145.3625', '91', '68', '2019/01/19', '09:36:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.4918', '142.2465', '69', '54', '2019/01/19', '14:24:00', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.0221', '141.5517', '76', '50', '2019/01/19', '19:12:00', 'Producer2']\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-fdbcec910def>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     63\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline_sent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m             \u001b[0mpublish_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproducer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'parsed'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m             \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m             \u001b[0mindex_of_line\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlength_lines\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pprint import pprint\n",
     "import pymongo\n",
@@ -310,25 +208,27 @@
     "    \n",
     "if __name__ == '__main__':\n",
     "   \n",
-    "    topic = 'same_topic'\n",
-    "    prod = 'Producer2'\n",
+    "    topic = 'same_topic' # The producers connect the stream with the topic, so I called it same topic\n",
+    "    prod = 'Producer2'  # Name of this producer\n",
     "    print('Publishing records..')\n",
     "    producer = connect_kafka_producer()\n",
     "    length_lines = len(aqua_lines)\n",
-    "    start_time = time.time()\n",
-    "    new_time = '00:00:00'\n",
-    "    new_time = datetime.strptime(new_time, \"%H:%M:%S\")\n",
+    "    start_time = time.time()  # start a timer\n",
+    "    new_time = '00:00:00'  # set a new time \n",
+    "    new_time = datetime.strptime(new_time, \"%H:%M:%S\")  # convert this time to a datetime object\n",
+    "    \n",
     "    while True:\n",
-    "        if time.time() - start_time <= 10:\n",
-    "            index_of_line = random.randrange(0, length_lines)\n",
-    "            new_date = new_date\n",
-    "            str_date = new_date.strftime('%Y/%m/%d')\n",
-    "            new_time = new_time + timedelta(hours=4, minutes = 48)\n",
-    "            final_time = new_time.strftime(\"%H:%M:%S\")\n",
-    "            line_sent = aqua_lines[index_of_line] + [str_date] + [final_time] + [prod]\n",
-    "            data = str(line_sent)\n",
-    "            publish_message(producer, topic, 'parsed', data)\n",
-    "            sleep(2)\n",
+    "        if time.time() - start_time <= 10:  # if the time is less than 10, meaning we are still on the same day\n",
+    "            index_of_line = random.randrange(0, length_lines)  # generate a random number, less than length_lines\n",
+    "            new_date = new_date  # set new date to be what it currenltly is, could a redundant statement\n",
+    "            str_date = new_date.strftime('%Y/%m/%d')  # make a string out of the new_date datetime object\n",
+    "            new_time = new_time + timedelta(hours=4, minutes = 48)   # set the time to be 1/5 of a day more\n",
+    "            final_time = new_time.strftime(\"%H:%M:%S\")  # set a string to be this time for insertion into db\n",
+    "            line_sent = aqua_lines[index_of_line] + [str_date] + [final_time] + [prod]  # concetenate data\n",
+    "            data = str(line_sent) # make the data a string\n",
+    "            publish_message(producer, topic, 'parsed', data)  # send it \n",
+    "            sleep(2) \n",
+    "        # same process is done below, but below we start a new day.\n",
     "        else:\n",
     "            index_of_line = random.randrange(0, length_lines)\n",
     "            new_date = new_date + timedelta(days = 1)\n",
@@ -343,25 +243,6 @@
     "            sleep(2)\n",
     "            "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "descriptor 'strftime' requires a 'datetime.date' object but received a 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-8c5805e45de6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'2015/06/17'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"%Y/%m/%d\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: descriptor 'strftime' requires a 'datetime.date' object but received a 'str'"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
