--- a/Assignment_PartB_Producer3.ipynb
+++ b/Assignment_PartB_Producer3.ipynb
@@ -6,6 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Name: Saral Gautam\n",
+    "# ID: 30618428\n",
+    "# email: sgau0007@student.monash.edu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# THIS FIRST CELL JUST FINDS THE LATEST DATE THE PRODUCER IS BELOW IT\n",
     "from pprint import pprint\n",
     "import pymongo\n",
     "from pymongo import MongoClient\n",
@@ -48,6 +60,7 @@
     "    return final[-1]\n",
     "\n",
     "def change_format(a_date):\n",
+    "    # this function puts the data in a string format that allows it to be sorted later on by MongoDB\n",
     "    date_final = datetime.strptime(a_date, '%d/%m/%y')\n",
     "    formatted = date_final.strftime(\"20%y/%m/%d\")\n",
     "    return formatted\n",
@@ -131,133 +144,19 @@
     "\n",
     "\n",
     "result = a_collection.insert_many(documents)  \n",
-    "# cursor = a_collection.find({})\n",
-    "# for item in cursor:\n",
-    "#     pprint(item)\n",
-    "# find the latest date in the stream\n",
     "\n",
     "latest_date = a_collection.find().sort(\"date\", pymongo.DESCENDING).limit(1)\n",
     "for k in latest_date:\n",
-    "    new_date = datetime.strptime(k['date'], '%Y/%m/%d')"
+    "    new_date = datetime.strptime(k['date'], '%Y/%m/%d') # change the date into a datetime object"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Publishing records..\n",
-      "Message published successfully. Data:  ['-36.9576', '141.5387', '70', '45', '2019/01/06', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.6204', '145.4205', '86', '60', '2019/01/06', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.8292', '142.1692', '84', '58', '2019/01/06', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.4591', '144.9492', '100', '89', '2019/01/06', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.438', '148.09', '84', '50', '2019/01/06', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.095', '141.7699', '98', '82', '2019/01/07', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.8714', '142.733', '77', '50', '2019/01/07', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.9742', '141.1855', '78', '51', '2019/01/07', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.8835', '142.2098', '90', '67', '2019/01/07', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.9112', '143.6025', '85', '61', '2019/01/07', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-34.2614', '141.6412', '57', '43', '2019/01/08', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.2727', '145.8181', '74', '47', '2019/01/08', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.6638', '142.8268', '73', '47', '2019/01/08', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-35.4666', '142.0749', '89', '65', '2019/01/08', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.6209', '144.0096', '72', '47', '2019/01/08', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.6599', '144.6129', '68', '44', '2019/01/09', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.9004', '141.0921', '68', '44', '2019/01/09', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.5757', '143.8756', '82', '55', '2019/01/09', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.3012', '141.163', '70', '45', '2019/01/09', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.9825', '143.837', '83', '57', '2019/01/09', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.2359', '141.3007', '55', '41', '2019/01/10', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.605', '149.308', '68', '43', '2019/01/10', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-35.2381', '142.994', '98', '83', '2019/01/10', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.5123', '144.4448', '79', '53', '2019/01/10', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-34.5374', '141.7141', '81', '54', '2019/01/10', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.7786', '145.178', '100', '105', '2019/01/11', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.3785', '145.6226', '77', '50', '2019/01/11', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.415', '148.105', '100', '52', '2019/01/11', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.1956', '141.0252', '67', '44', '2019/01/11', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.6136', '142.5022', '81', '54', '2019/01/11', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.437', '148.104', '99', '61', '2019/01/12', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.6514', '142.9253', '75', '48', '2019/01/12', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.6997', '145.5519', '89', '64', '2019/01/12', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.5741', '143.8891', '74', '48', '2019/01/12', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.446', '148.102', '100', '65', '2019/01/12', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.429', '141.5759', '90', '67', '2019/01/13', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.884', '145.8938', '66', '43', '2019/01/13', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.7303', '142.9382', '71', '46', '2019/01/13', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.2098', '143.927', '77', '50', '2019/01/13', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.5583', '142.9318', '71', '46', '2019/01/13', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.466', '148.143', '80', '46', '2019/01/14', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.9435', '143.5948', '88', '63', '2019/01/14', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.4261', '147.0323', '98', '83', '2019/01/14', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.8986', '141.6385', '72', '52', '2019/01/14', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.2767', '143.2906', '86', '60', '2019/01/14', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.284', '146.145', '100', '54', '2019/01/15', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.7817', '142.4872', '72', '46', '2019/01/15', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.6296', '142.5191', '70', '45', '2019/01/15', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-35.8857', '142.1212', '74', '48', '2019/01/15', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.2833', '141.6896', '68', '44', '2019/01/15', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.2017', '143.8117', '88', '64', '2019/01/16', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.3655', '148.2821', '85', '59', '2019/01/16', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.5284', '143.0438', '79', '52', '2019/01/16', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.9072', '141.9183', '79', '53', '2019/01/16', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.5583', '142.9318', '71', '46', '2019/01/16', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.7236', '142.947', '94', '73', '2019/01/17', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.0201', '141.7743', '76', '54', '2019/01/17', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.1751', '142.7831', '67', '43', '2019/01/17', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.3414', '141.0295', '64', '42', '2019/01/17', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.4143', '143.272', '89', '65', '2019/01/17', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-38.0812', '143.2335', '80', '54', '2019/01/18', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.333', '143.534', '88', '58', '2019/01/18', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.5842', '148.5717', '65', '49', '2019/01/18', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.2205', '141.7933', '81', '54', '2019/01/18', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.9455', '141.849', '77', '51', '2019/01/18', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-35.9065', '143.6763', '75', '49', '2019/01/19', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.5607', '144.1913', '80', '53', '2019/01/19', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.782', '148.3844', '100', '99', '2019/01/19', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.1925', '145.93', '97', '79', '2019/01/19', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.2995', '145.6342', '74', '48', '2019/01/19', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.95', '142.366', '92', '70', '2019/01/20', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.7943', '143.0545', '70', '45', '2019/01/20', '04:48:00', 'Producer3']\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Message published successfully. Data:  ['-36.9396', '143.1462', '92', '70', '2019/01/20', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.662', '142.6505', '75', '49', '2019/01/20', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.4348', '141.3', '78', '52', '2019/01/20', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.237', '142.141', '100', '112', '2019/01/21', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.7721', '142.4219', '62', '46', '2019/01/21', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.8377', '143.4624', '64', '42', '2019/01/21', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.8452', '142.2483', '64', '42', '2019/01/21', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.7786', '145.178', '100', '105', '2019/01/21', '19:12:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.9194', '143.6131', '76', '50', '2019/01/22', '00:00:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.1456', '141.9066', '84', '58', '2019/01/22', '04:48:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-38.0427', '141.0271', '77', '50', '2019/01/22', '09:36:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.4251', '142.2216', '58', '40', '2019/01/22', '14:24:00', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.3148', '144.3607', '75', '49', '2019/01/22', '19:12:00', 'Producer3']\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-c44b1ff0ab99>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     52\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline_sent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m             \u001b[0mpublish_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproducer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'parsed'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m             \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m             \u001b[0mindex_of_line\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlength_lines\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('hotspot_TERRA_streaming.csv', 'r') as file_four: # open hotspot historic file\n",
     "    terra_data = csv.reader(file_four)\n",
@@ -293,26 +192,30 @@
     "    \n",
     "if __name__ == '__main__':\n",
     "   \n",
-    "    topic = 'same_topic'\n",
-    "    prod = 'Producer3'\n",
+    "    topic = 'same_topic'  # The producers connect the stream with the topic, so I called it same topic\n",
+    "    prod = 'Producer3'  # Name of this producer\n",
     "    \n",
     "    print('Publishing records..')\n",
+    "    \n",
     "    producer = connect_kafka_producer()\n",
-    "    length_lines = len(terra_lines)\n",
-    "    start_time = time.time()\n",
-    "    new_time = '00:00:00'\n",
-    "    new_time = datetime.strptime(new_time, \"%H:%M:%S\")\n",
+    "    length_lines = len(terra_lines)  # find the amount of entries in terra data, to help generate random numbers\n",
+    "    # to access each line\n",
+    "    start_time = time.time()  # start a timer\n",
+    "    new_time = '00:00:00'  # set a new time \n",
+    "    new_time = datetime.strptime(new_time, \"%H:%M:%S\")  # convert this time to a datetime object\n",
+    "    \n",
     "    while True:      \n",
-    "        if time.time() - start_time <= 10:\n",
-    "            index_of_line = random.randrange(0, length_lines)\n",
-    "            new_date = new_date\n",
-    "            str_date = new_date.strftime('%Y/%m/%d')\n",
-    "            new_time = new_time + timedelta(hours=4, minutes = 48)\n",
-    "            final_time = new_time.strftime(\"%H:%M:%S\")\n",
-    "            line_sent = terra_lines[index_of_line] + [str_date] + [final_time]+ [prod]\n",
-    "            data = str(line_sent)\n",
-    "            publish_message(producer, topic, 'parsed', data)\n",
+    "        if time.time() - start_time <= 10:  # if the time is less than 10, meaning we are still on the same day\n",
+    "            index_of_line = random.randrange(0, length_lines) # generate a random number, less than length_lines\n",
+    "            new_date = new_date  # set new date to be what it currenltly is, could a redundant statement\n",
+    "            str_date = new_date.strftime('%Y/%m/%d')  # make a string out of the new_date datetime object\n",
+    "            new_time = new_time + timedelta(hours=4, minutes = 48)  # set the time to be 1/5 of a day more\n",
+    "            final_time = new_time.strftime(\"%H:%M:%S\")  # set a string to be this time for insertion into db\n",
+    "            line_sent = terra_lines[index_of_line] + [str_date] + [final_time]+ [prod]  # concetenate data\n",
+    "            data = str(line_sent)  # make the data a string\n",
+    "            publish_message(producer, topic, 'parsed', data)  # send it \n",
     "            sleep(2)\n",
+    "        # same process is done below, but below we start a new day.\n",
     "        else:\n",
     "            index_of_line = random.randrange(0, length_lines)\n",
     "            new_date = new_date + timedelta(days = 1)\n",
