--- a/Assignment_PartB_Streaming_Application.ipynb
+++ b/Assignment_PartB_Streaming_Application.ipynb
@@ -2,10 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Name: Saral Gautam\n",
+    "# ID: 30618428\n",
+    "# email: sgau0007@student.monash.edu\n",
+    "\n",
     "def get_prec_number(a_string):\n",
     "    # this function gives the float part of a precipitation measurement\n",
     "    final = a_string.strip()\n",
@@ -20,24 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-309185419201>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    232\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    233\u001b[0m \u001b[0mssc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 234\u001b[0;31m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m600\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Run stream for 10 minutes just in case no detection of producer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    235\u001b[0m \u001b[0;31m# ssc.awaitTermination()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    236\u001b[0m \u001b[0mssc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstopSparkContext\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstopGraceFully\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/FIT5148/jupyter/lib/python3.5/site-packages/pyspark/context.py\u001b[0m in \u001b[0;36msignal_handler\u001b[0;34m(signal, frame)\u001b[0m\n\u001b[1;32m    268\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0msignal_handler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msignal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    269\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcancelAllJobs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 270\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    271\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    272\u001b[0m         \u001b[0;31m# see http://stackoverflow.com/questions/23206787/\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
     "from pyspark.sql import SparkSession\n",
@@ -279,198 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'GHI_w/m2': 134.0,\n",
-      " '_id': ObjectId('60a9cebdbe3498736e23d129'),\n",
-      " 'air_temperature_celsius': 15.0,\n",
-      " 'cause': 'other',\n",
-      " 'confidence': None,\n",
-      " 'date': '2019/01/12',\n",
-      " 'datetime': '00:00:00',\n",
-      " 'latitude': -37.608,\n",
-      " 'longitude': 149.292,\n",
-      " 'max_wind_speed': 12.0,\n",
-      " 'precipitation_level': 0.02,\n",
-      " 'precipitation_type': 'G',\n",
-      " 'relative_humidity': 44.6,\n",
-      " 'surface_temperature_celsius': None,\n",
-      " 'windspeed_knots': 9.7}\n",
-      "{'GHI_w/m2': 102.0,\n",
-      " '_id': ObjectId('60a9cec2be3498736e23d12b'),\n",
-      " 'air_temperature_celsius': 11.0,\n",
-      " 'cause': 'other',\n",
-      " 'confidence': 85.0,\n",
-      " 'date': '2019/01/16',\n",
-      " 'datetime': '04:48:00',\n",
-      " 'latitude': -37.3655,\n",
-      " 'longitude': 148.2821,\n",
-      " 'max_wind_speed': 26.0,\n",
-      " 'precipitation_level': 0.0,\n",
-      " 'precipitation_type': 'G',\n",
-      " 'relative_humidity': 40.4,\n",
-      " 'surface_temperature_celsius': 59.0,\n",
-      " 'windspeed_knots': 19.3}\n",
-      "{'GHI_w/m2': 104.0,\n",
-      " '_id': ObjectId('60a9ceccbe3498736e23d12d'),\n",
-      " 'air_temperature_celsius': 12.0,\n",
-      " 'cause': 'other',\n",
-      " 'confidence': None,\n",
-      " 'date': '2019/01/14',\n",
-      " 'datetime': '00:00:00',\n",
-      " 'latitude': -37.091,\n",
-      " 'longitude': 145.362,\n",
-      " 'max_wind_speed': 7.0,\n",
-      " 'precipitation_level': 0.0,\n",
-      " 'precipitation_type': 'I',\n",
-      " 'relative_humidity': 48.8,\n",
-      " 'surface_temperature_celsius': None,\n",
-      " 'windspeed_knots': 4.2}\n",
-      "{'GHI_w/m2': 176.0,\n",
-      " '_id': ObjectId('60a9ced6be3498736e23d12f'),\n",
-      " 'air_temperature_celsius': 21.0,\n",
-      " 'cause': 'other',\n",
-      " 'confidence': 77.0,\n",
-      " 'date': '2019/01/14',\n",
-      " 'datetime': '04:48:00',\n",
-      " 'latitude': -37.7714,\n",
-      " 'longitude': 142.8339,\n",
-      " 'max_wind_speed': 11.1,\n",
-      " 'precipitation_level': 0.0,\n",
-      " 'precipitation_type': 'I',\n",
-      " 'relative_humidity': 52.8,\n",
-      " 'surface_temperature_celsius': 50.0,\n",
-      " 'windspeed_knots': 4.1}\n",
-      "{'GHI_w/m2': 176.0,\n",
-      " '_id': ObjectId('60a9ced6be3498736e23d130'),\n",
-      " 'air_temperature_celsius': 21.0,\n",
-      " 'cause': 'other',\n",
-      " 'confidence': 65.0,\n",
-      " 'date': '2019/01/14',\n",
-      " 'datetime': '19:12:00',\n",
-      " 'latitude': -36.5664,\n",
-      " 'longitude': 142.9892,\n",
-      " 'max_wind_speed': 11.1,\n",
-      " 'precipitation_level': 0.0,\n",
-      " 'precipitation_type': 'I',\n",
-      " 'relative_humidity': 52.8,\n",
-      " 'surface_temperature_celsius': 42.0,\n",
-      " 'windspeed_knots': 4.1}\n",
-      "{'GHI_w/m2': 100.0,\n",
-      " '_id': ObjectId('60a9cee0be3498736e23d132'),\n",
-      " 'air_temperature_celsius': 11.0,\n",
-      " 'cause': 'other',\n",
-      " 'confidence': 75.0,\n",
-      " 'date': '2019/01/19',\n",
-      " 'datetime': '00:00:00',\n",
-      " 'latitude': -35.9065,\n",
-      " 'longitude': 143.6763,\n",
-      " 'max_wind_speed': 14.0,\n",
-      " 'precipitation_level': 0.2,\n",
-      " 'precipitation_type': 'G',\n",
-      " 'relative_humidity': 43.2,\n",
-      " 'surface_temperature_celsius': 49.0,\n",
-      " 'windspeed_knots': 8.1}\n",
-      "{'GHI_w/m2': 100.0,\n",
-      " '_id': ObjectId('60a9cee0be3498736e23d133'),\n",
-      " 'air_temperature_celsius': 11.0,\n",
-      " 'cause': 'other',\n",
-      " 'confidence': 80.0,\n",
-      " 'date': '2019/01/19',\n",
-      " 'datetime': '04:48:00',\n",
-      " 'latitude': -36.5607,\n",
-      " 'longitude': 144.1913,\n",
-      " 'max_wind_speed': 14.0,\n",
-      " 'precipitation_level': 0.2,\n",
-      " 'precipitation_type': 'G',\n",
-      " 'relative_humidity': 43.2,\n",
-      " 'surface_temperature_celsius': 53.0,\n",
-      " 'windspeed_knots': 8.1}\n",
-      "{'GHI_w/m2': 122.0,\n",
-      " '_id': ObjectId('60a9ceeabe3498736e23d135'),\n",
-      " 'air_temperature_celsius': 14.0,\n",
-      " 'cause': 'other',\n",
-      " 'confidence': 77.0,\n",
-      " 'date': '2019/01/16',\n",
-      " 'datetime': '19:12:00',\n",
-      " 'latitude': -36.9151,\n",
-      " 'longitude': 142.0798,\n",
-      " 'max_wind_speed': 19.0,\n",
-      " 'precipitation_level': 0.03,\n",
-      " 'precipitation_type': 'G',\n",
-      " 'relative_humidity': 48.2,\n",
-      " 'surface_temperature_celsius': 50.0,\n",
-      " 'windspeed_knots': 12.5}\n",
-      "{'GHI_w/m2': 122.0,\n",
-      " '_id': ObjectId('60a9ceeabe3498736e23d136'),\n",
-      " 'air_temperature_celsius': 14.0,\n",
-      " 'cause': 'other',\n",
-      " 'confidence': 87.0,\n",
-      " 'date': '2019/01/16',\n",
-      " 'datetime': '14:24:00',\n",
-      " 'latitude': -36.6095,\n",
-      " 'longitude': 142.7011,\n",
-      " 'max_wind_speed': 19.0,\n",
-      " 'precipitation_level': 0.03,\n",
-      " 'precipitation_type': 'G',\n",
-      " 'relative_humidity': 48.2,\n",
-      " 'surface_temperature_celsius': 62.0,\n",
-      " 'windspeed_knots': 12.5}\n",
-      "{'GHI_w/m2': 122.0,\n",
-      " '_id': ObjectId('60a9ceeabe3498736e23d137'),\n",
-      " 'air_temperature_celsius': 14.0,\n",
-      " 'cause': 'other',\n",
-      " 'confidence': 92.0,\n",
-      " 'date': '2019/01/20',\n",
-      " 'datetime': '09:36:00',\n",
-      " 'latitude': -36.9396,\n",
-      " 'longitude': 143.1462,\n",
-      " 'max_wind_speed': 19.0,\n",
-      " 'precipitation_level': 0.03,\n",
-      " 'precipitation_type': 'G',\n",
-      " 'relative_humidity': 48.2,\n",
-      " 'surface_temperature_celsius': 70.0,\n",
-      " 'windspeed_knots': 12.5}\n",
-      "{'GHI_w/m2': 122.0,\n",
-      " '_id': ObjectId('60a9ceeabe3498736e23d138'),\n",
-      " 'air_temperature_celsius': 14.0,\n",
-      " 'cause': 'other',\n",
-      " 'confidence': 92.0,\n",
-      " 'date': '2019/01/20',\n",
-      " 'datetime': '00:00:00',\n",
-      " 'latitude': -37.95,\n",
-      " 'longitude': 142.366,\n",
-      " 'max_wind_speed': 19.0,\n",
-      " 'precipitation_level': 0.03,\n",
-      " 'precipitation_type': 'G',\n",
-      " 'relative_humidity': 48.2,\n",
-      " 'surface_temperature_celsius': 70.0,\n",
-      " 'windspeed_knots': 12.5}\n",
-      "{'GHI_w/m2': 122.0,\n",
-      " '_id': ObjectId('60a9ceeabe3498736e23d139'),\n",
-      " 'air_temperature_celsius': 14.0,\n",
-      " 'cause': 'other',\n",
-      " 'confidence': 70.0,\n",
-      " 'date': '2019/01/20',\n",
-      " 'datetime': '04:48:00',\n",
-      " 'latitude': -37.7943,\n",
-      " 'longitude': 143.0545,\n",
-      " 'max_wind_speed': 19.0,\n",
-      " 'precipitation_level': 0.03,\n",
-      " 'precipitation_type': 'G',\n",
-      " 'relative_humidity': 48.2,\n",
-      " 'surface_temperature_celsius': 45.0,\n",
-      " 'windspeed_knots': 12.5}\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "client = MongoClient() # so we connect on the default host and port\n",
     "db = client.fit3182_assignment_db # create a new database fit3182_assignment_db\n",
